--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lint-staged": "^9.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
+    "react": "^16.9.0",
     "rimraf": "^3.0.0",
     "typescript": "^3.5.3"
   },
