--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,16 +14,18 @@
     "prettier/@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/member-ordering": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/no-object-literal-type-assertion": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/array-type": "off",
     "sort-keys": "off",
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": "off",
     "import/no-internal-modules": "off",
     "prefer-arrow/prefer-arrow-functions": "off"
   }
