--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bin": "dist/cli.js",
   "sideEffects": false,
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -w"
   },
@@ -50,9 +50,7 @@
     "eslint-plugin-import": "^2.18.2",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
-    "react": "^16.9.0",
     "rimraf": "^3.0.0",
     "typescript": "^3.5.3"
   },
