--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "babel-plugin-closure-elimination": "^1.3.0",
     "babel-plugin-transform-async-to-promises": "^0.8.14",
     "gzip-size": "^5.1.1",
+    "pretty-bytes": "^5.3.0",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-buble": "^0.19.8",
