--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "babel-plugin-closure-elimination": "^1.3.0",
     "babel-plugin-transform-async-to-promises": "^0.8.14",
+    "babel-plugin-transform-replace-expressions": "^0.2.0",
     "gzip-size": "^5.1.1",
     "pretty-bytes": "^5.3.0",
     "rollup": "^1.19.4",
