--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -w"
   },
