--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@babel/core": "^7.6.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
