--- a/package.json
+++ b/package.json
@@ -52,8 +52,15 @@
     "rimraf": "^3.0.0",
     "typescript": "^3.5.3"
   },
+  "peerDependencies": {
+    "rollup": ">=1.20.0"
+  },
   "dependencies": {
     "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "babel-plugin-closure-elimination": "^1.3.0",
+    "babel-plugin-transform-async-to-promises": "^0.8.14",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
